--- a/style.css
+++ b/style.css
@@ -157,6 +157,14 @@ padding-right: 40px;
 padding-top: 100px;
 padding-bottom: 100px;
 }
+ul {
+list-style-type: none;
+padding-left: 40px;
+padding-right: 40px;
+}
+
+
+
 }
 
 
@@ -164,8 +172,7 @@ padding-bottom: 100px;
 
 @media (min-width: 375px) {
 #top-nav {
-padding-left: 8px;
-font-size: 16px;
+font-size: 14px;
 }
 #socials {
 colors: white;
@@ -186,17 +193,26 @@ padding-right: 76px;
 padding-top: 100px;
 padding-bottom: 100px;
 }
+ul {
+list-style-type: none;
+padding-left: 60px;
+padding-right: 60px;
+}
+
+
+
 /**Mobile Lrg**/
 @media (min-width: 425px) {
 #top-nav {
-padding-left: 30px;
+padding-left: 15px;
 font-size: 16px;
 }
 #socials {
 colors: white;
-padding-top: 440px;
-padding-left: 4px;
-font-size: 18px;
+padding-top: 420px;
+padding-left: 40px;
+padding-right: 40px;
+font-size: 20px;
 }
 .box1 {
 opacity: 0.9;
